[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/gui/default.tres" type="Theme" id=1]
[ext_resource path="res://scenes/gui/pause_menu.gd" type="Script" id=2]

[node name="root" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 2 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="vbox" type="VBoxContainer" parent="."]
anchor_right = 0.33
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
alignment = 1

[node name="resume" type="Button" parent="vbox"]
margin_top = 100.0
margin_right = 168.0
margin_bottom = 119.0
text = "resume"
flat = true

[node name="restart" type="Button" parent="vbox"]
margin_top = 123.0
margin_right = 168.0
margin_bottom = 142.0
text = "restart"
flat = true

[node name="settings" type="Button" parent="vbox"]
margin_top = 146.0
margin_right = 168.0
margin_bottom = 165.0
disabled = true
text = "settings"
flat = true

[node name="quit" type="Button" parent="vbox"]
margin_top = 169.0
margin_right = 168.0
margin_bottom = 188.0
text = "quit to menu"
flat = true

[connection signal="button_up" from="vbox/resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="vbox/restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="vbox/quit" to="." method="_on_quit_button_up"]
